# ripcalc

./: .gitlab-ci.yml  Cargo.toml  Makefile  README.md  changelog.md  ripcalc.1  ripcalc.md
src/: lib.rs  main.rs
tests/: funcs.rs
