[package]
name = "ripcalc"
description = "ripcalc, format and lookup IP addresses"
version = "0.1.13"
authors = ["ed neville <ed@s5h.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://www.usenix.org.uk/content/ripcalc.html"
repository = "https://gitlab.com/edneville/ripcalc"
readme = "README.md"
categories = ["command-line-utilities"]
documentation = "https://www.usenix.org.uk/content/ripcalc.html"
keywords = ["ip","network","csv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
csv = "1"
nix = { version = ">= 0.27", features = ["signal", "net", "fs" ] }
